Implement user authentication and animation management features
- Added AuthController for user login, registration, and logout.
- Created AnimationController to fetch user-specific animations.
- Introduced UserVisualsController for retrieving user visual settings.
- Developed UserService for user validation and management.
- Updated .gitignore to include appsettings.json.
- Added necessary DTOs for login and animation responses.
- Integrated Lottie animations in the frontend with user authentication.
- Updated package.json and package-lock.json to include react-lottie-player.

--- a/.gitignore
+++ b/.gitignore
@@ -582,7 +582,7 @@ $RECYCLE.BIN/
 # Secrets and credentials
 secrets.json
 appsettings.Development.json
-appsettings.Local.json
+appsettings.json
 *.secrets.json
 credentials.json
 
